--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@types/autoprefixer": "^9.7.2",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "browser-sync": "^2.26.13",
+        "browser-sync-webpack-plugin": "2.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
@@ -29,6 +31,7 @@
     },
     "dependencies": {
         "@babel/helper-compilation-targets": "^7.12.5",
+        "@types/browser-sync": "^2.26.1",
         "htmlparser2": "^6.0.0",
         "postcss-loader": "^4.1.0",
         "webpack": "^5.15.0",
